fix_buttonoverflow

--- a/src/styles/Dropdown.css
+++ b/src/styles/Dropdown.css
@@ -25,3 +25,21 @@
 .p-focus {
   background: rgb(104, 100, 100);
 }
+
+.p-dropdown-items-wrapper::-webkit-scrollbar {
+  width: 8px;
+  right: 5px;
+}
+
+.p-dropdown-items-wrapper::-webkit-scrollbar-track {
+  background: #1d1d1d;
+}
+
+.p-dropdown-items-wrapper::-webkit-scrollbar-thumb {
+  background-color: #93abff;
+  border-radius: 4px;
+}
+
+.p-dropdown-items-wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: #93abff;
+}
