--- a/src/styles/MultiSelect.css
+++ b/src/styles/MultiSelect.css
@@ -29,3 +29,21 @@
 .p-multiselect-panel .p-multiselect-header .p-multiselect-close{
     color: white;
 }
+
+.p-multiselect-items-wrapper::-webkit-scrollbar {
+    width: 8px;
+    right: 5px;
+  }
+
+.p-multiselect-items-wrapper::-webkit-scrollbar-track {
+background: #1d1d1d;
+}
+
+.p-multiselect-items-wrapper::-webkit-scrollbar-thumb {
+background-color: #93abff;
+border-radius: 4px;
+}
+
+.p-multiselect-items-wrapper::-webkit-scrollbar-thumb:hover {
+background-color: #93abff;
+}
